environments/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contact-us
  namespace: dev
spec:
  selector:
    app: contact-us
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
  type: ClusterIP
