environments/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contact-us
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: contact-us.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: contact-us
            port:
              number: 80
